[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/player/energyorb.png" type="Texture" id=1]
[ext_resource path="res://scripts/EnergyOrb.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 12.86

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9.55376, 9.59518 )

[sub_resource type="CircleShape2D" id=3]
radius = 415.132

[node name="EnergyOrb" type="KinematicBody2D" groups=[
"energyorb",
]]
input_pickable = true
script = ExtResource( 2 )

[node name="Orb" type="Sprite" parent="."]
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
modulate = Color( 0, 1, 0.109804, 1 )
shape = SubResource( 1 )

[node name="FrictionTimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="EnergyTimer" type="Timer" parent="."]

[node name="LifeTimer" type="Timer" parent="."]
autostart = true

[node name="Position2D" type="Position2D" parent="."]
scale = Vector2( 1, 0.6 )

[node name="AggroRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="AggroRange"]
modulate = Color( 0.85098, 1, 0, 1 )
shape = SubResource( 3 )

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="died" from="." to="." method="_on_EnergyOrb_died"]
[connection signal="timeout" from="FrictionTimer" to="." method="_on_FrictionTimer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="timeout" from="EnergyTimer" to="." method="_on_EnergyTimer_timeout"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_LifeTimer_timeout"]
[connection signal="body_entered" from="AggroRange" to="." method="_on_AggroRange_body_entered"]
[connection signal="body_exited" from="AggroRange" to="." method="_on_AggroRange_body_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
